--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="An app for students and parents to buy after school classes and activities">
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
 
+  <link rel="manifest" href="manifest.json">
+
   <meta property="og:title" content="AfterSchool">
   <meta property="og:url" content="https://bonafideboss.github.io/AfterSchoolFrontend/">
   <meta property="og:type" content="website">
