--- a/index.html
+++ b/index.html
@@ -11,10 +11,42 @@
   <link rel="manifest" href="manifest.json">
 
   <meta property="og:title" content="AfterSchool">
-  <meta property="og:url" content="https://bonafideboss.github.io/AfterSchoolFrontend/">
-  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://bonafideboss.github.io/AfterSchoolApp/">
+  <meta property="og:type" content="web.app">
   <meta property="og:description" content="An app to buy after school classes and activities">
-  <meta property="og:image" content="https://bonafideboss.github.io/AfterSchoolFrontend/assets/images/logo.png">
+  <meta property="og:image" content="https://bonafideboss.github.io/AfterSchoolApp/img/logo.png">
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link href="/img/splashscreens/iphone5_splash.png"
+    media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)"
+    rel="apple-touch-startup-image" />
+  <link href="/img/splashscreens/iphone6_splash.png"
+    media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)"
+    rel="apple-touch-startup-image" />
+  <link href="/img/splashscreens/iphoneplus_splash.png"
+    media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)"
+    rel="apple-touch-startup-image" />
+  <link href="/img/splashscreens/iphonex_splash.png"
+    media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)"
+    rel="apple-touch-startup-image" />
+  <link href="/img/splashscreens/iphonexr_splash.png"
+    media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)"
+    rel="apple-touch-startup-image" />
+  <link href="/img/splashscreens/iphonexsmax_splash.png"
+    media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)"
+    rel="apple-touch-startup-image" />
+  <link href="/img/splashscreens/ipad_splash.png"
+    media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)"
+    rel="apple-touch-startup-image" />
+  <link href="/img/splashscreens/ipadpro1_splash.png"
+    media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)"
+    rel="apple-touch-startup-image" />
+  <link href="/img/splashscreens/ipadpro3_splash.png"
+    media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)"
+    rel="apple-touch-startup-image" />
+  <link href="/img/splashscreens/ipadpro2_splash.png"
+    media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)"
+    rel="apple-touch-startup-image" />
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/mdbootstrap-7.3.0/mdb.min.css">
